<resources>
    <string name="app_name">Driver\'s License</string>
    <string name="action_settings">Settings</string>
    <string name="default_desc">Align the barcode within the square</string>
    <string name="action_photo_desc">Photo</string>
    <string name="action_light_on_desc">On</string>
    <string name="action_light_off_desc">Off</string>
    <string name="action_produce_desc">Create</string>
    <string name="label_format">format:{format}</string>
    <string name="label_meta">meta:{meta}</string>
    <string name="label_code_value">https://www.google.com</string>
    <string name="label_time">time:{time}</string>
    <string name="label_type">type:{type}</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="scan_hint">Align the barcode within the square</string>
    <string name="flash_off">Flash off</string>
    <string name="linear">Linear</string>
    <string name="qrcode">QRCode</string>
    <string name="pdf417">PDF417</string>
    <string name="datamatrix">DataMatrix</string>
    <string name="Aztec">Aztec</string>
    <string name="Databar">GS1 DataBar</string>
    <string name="PatchCode">PatchCode</string>
    <string name="MaxiCode">MaxiCode</string>
    <string name="MicroQR">MicroQR</string>
    <string name="MicroPDF417">MicroPDF417</string>
    <string name="GS1Composite">GS1 Composite Code</string>
    <string name="postalcode">Postal Code</string>
    <string name="dotcode">DotCode</string>
</resources>
