<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="#FFFFFF"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<android.support.v7.widget.Toolbar
		android:id="@+id/settoolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		app:navigationIcon="@drawable/baseline_keyboard_backspace_white_18dp"
		app:popupTheme="@style/AppTheme.PopupOverlay"
		/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<RelativeLayout
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:layout_marginTop="16dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Number of Codes"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>
				<Button
					android:id="@+id/btn_sub"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:text="-"
					android:layout_alignParentRight="true"
					android:layout_marginRight="80dp"/>
				<TextView
					android:id="@+id/tv_number_of_codes"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentRight="true"
					android:text="0"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"
					android:gravity="center"
					android:layout_marginRight="40dp"/>
				<Button
					android:id="@+id/btn_add"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:text="+"
					android:layout_alignParentRight="true"/>
			</RelativeLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/textView3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/linear"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbLinear"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>

			<FrameLayout
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/textView4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/qrcode"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbQR"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>

			<FrameLayout
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/textView5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/pdf417"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbPDF417"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>

			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/datamatrix"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbDataMatrix"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>

			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/Aztec"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbAztec"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/Databar"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbDatabar"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/PatchCode"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbPatchCode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView10"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/MaxiCode"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbMaxiCode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView11"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/MicroQR"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbMicroQR"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/MicroPDF417"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbMicroPDF417"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView13"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/GS1Composite"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbGS1Composite"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
			<FrameLayout
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView

					android:id="@+id/textView14"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:text="@string/postalcode"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/type"/>

				<CheckBox
					android:id="@+id/ckbPostalCode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_gravity="right|center_vertical"/>
			</FrameLayout>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/divider"/>
            <FrameLayout
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/dotcode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/type"/>

                <CheckBox
                    android:id="@+id/ckbDotCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right|center_vertical"/>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/divider"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
